added jest tests

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./src/server.ts",
   "scripts": {
     "test": "jest",
+    "test:server": "jest -i test/server.test.ts -t",
     "dev": "ts-node ./src/server.ts",
     "start": "nodemon ./src/server.ts",
     "build": "tsc --project ./"
